added virtual threads